# syphonout

./: .ai_session_log.md  .gitignore  AI_HANDOFF.md  CONVERSATION_LOG.md  VIRTUAL_DISPLAYS_PLAN.md  VIRTUAL_DISPLAY_TESTS.md  WindowInventory  install_obs_syphon.sh  project.yml  run_tests.sh  step.sh  syphonout-spec.md
SyphonOut.xcodeproj/: project.pbxproj
SyphonOut/App/: AppDelegate.swift  AppLog.swift  HotkeyManager.swift  Info.plist  SyphonOut.entitlements  main.m
SyphonOut/Bridging/: SyphonOut-Bridging-Header.h  syphonout_core.h
SyphonOut/Logging/: LogViewerWindowController.swift
SyphonOut/MenuBar/: MenuBuilder.swift  StatusBarController.swift
SyphonOut/Metal/: MetalRenderer.swift  Shaders.metal
SyphonOut/Output/: OutputController.swift  OutputManager.swift  OutputMode.swift  OutputWindowController.swift
SyphonOut/PowerPoint/: PowerPointSetupWindowController.swift
SyphonOut/Preferences/: PreferencesStore.swift  PreferencesWindowController.swift
SyphonOut/SOLink/: SOLinkClient.h  SOLinkClient.m
SyphonOut/Syphon/: SyphonBridge.h  SyphonBridge.m  SyphonClientWrapper.swift  SyphonNative.h  SyphonNative.m  SyphonOut-Bridging-Header.h  SyphonServerDescription.swift  SyphonServerDiscovery.swift
SyphonOut/VirtualDisplay/: PreviewRenderer.swift  VirtualDisplayManager.swift  VirtualDisplayWindowController.swift
SyphonOut/WindowRouting/: DisplayCapture.swift  PermissionManager.swift  PowerPointPreset.swift  WindowCapture.swift  WindowCaptureManager.swift  WindowInventory.swift  WindowMover.swift  WindowRoutingWindowController.swift
core/: Cargo.toml  build.rs  cbindgen.toml  syphonout_core.h
core/src/: core.rs  lib.rs  output.rs  registry.rs  renderer.rs  solink_publisher.rs  state.rs  syphon.rs  virtual_display.rs
obs-solink/: CMakeLists.txt  build.sh
obs-solink/cmake/: MacOSXBundleInfo.plist.in
obs-solink/data/locale/: en-US.ini
obs-solink/include/: obs-frontend-api.h  solink-protocol.h
obs-solink/src/: solink-discovery.h  solink-discovery.m  solink-output.c  solink-output.h  solink-plugin.c  solink-shm.c  solink-shm.h  solink-streams-ui.h  solink-streams-ui.m  solink-surface-pool.h  solink-surface-pool.m
obs-solink/tests/: test_protocol.c  test_shm.c
